JumpScript/tests/baselines/reference/forIn2.errors.txt
tests/cases/compiler/forIn2.jump(1,15): error TS2407: The right-hand side of a 'for...in' statement must be of type 'any', an object type or a type parameter.


==== tests/cases/compiler/forIn2.jump (1 errors) ====
    for (var i in 1) {
                  ~
!!! error TS2407: The right-hand side of a 'for...in' statement must be of type 'any', an object type or a type parameter.
    }